# extensions-marketplace

./: Makefile  README.md
backend/: pyproject.toml  ruff.toml
backend/config/: settings.py  urls.py
backend/extensions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/extensions/migrations/: 0001_initial.py
